<resources>
    <string name="app_name">Card Crucible</string>
    <string name="card_crucible_logo">Card Crucible Logo</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Settings Activity-->
    <string name="title_activity_settings">Settings</string>
    <string name="btn_addCards"> + Cards</string>
    <string name="btn_editCards">Edit Cards</string>
    <string name="btn_editTheme">Edit Theme</string>

    <!-- Add Category Activity-->
    <string name="add_category">Add Category</string>

    <!-- Edit Category Activity-->
    <string name="edit_category">Edit Category</string>
    <string name="editTextFilterCategory_hint">Category</string>
    <string name="btn_filterCards"> Filter by Category</string>

    <!-- Add Card Activity-->
    <string name="title_activity_addCards">Add Card</string>
    <string name="EditTextCategory_hint">Category</string>
    <string name="EditTextQuestion_hint">Question</string>
    <string name="EditTextAnswer_hint">Answer</string>
    <string name="addBtn">+</string>

    <!-- Edit Card Activity-->

    <string name="edit_card_title">Edit Card</string>
    <string name="edit_button_text_save">Save</string>

    <!-- Edit Theme Activity-->

    <!-- Card Selection Activity-->
    <string name="btn_beginFlashCards">Begin</string>

    <!-- Study Mode Activity-->
    <string name="study_mode">Study Mode</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="flip">Flip</string>

    <!-- Game Mode Activity-->
    <string name="game_mode">Game Mode</string>

</resources>